<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AvgFor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="ok">Okay</string>
    <string name="add_class">Add Class</string>
    <string name="refresh_seat">Refresh</string>
    <string name="logout">LOG OUT</string>
    <string name="seats">SEATS</string>
    <string name="help">HELP</string>
    <string name="feedback">FEED BACK</string>
    <string name="editT1">Username</string>
    <string name="editT2">Password</string>
    <string name="Signup">Sign up</string>
    <string name="Signin">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">1485863734981240</string>
    <string name="SigninFB">Signin with FaceBook</string>
    <string name="avgfor">AvgFor</string>

</resources>
