<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.antedeluvia.avgfor.AFLoginActivity"
    android:background="#1abc9c">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:id="@+id/outblock"
        android:weightSum="1"
        android:background="@drawable/bg_login">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_alignLeft="@+id/editText2"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="60dp"
            android:layout_weight="0.07"
            android:layout_marginRight="12dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/innerblock"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/input_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="0.07"
            android:layout_marginRight="12dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/innerblock"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:layout_weight="0.23">

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:text="@string/Signin"
                android:textColor="#eeeeee"
                android:layout_gravity="left"
                android:background="@drawable/btn_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:text="@string/Signup"
                android:textColor="#eeeeee"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:text="@string/SigninFB"
                android:textColor="#eeeeee"
                android:layout_marginLeft="20dp"
                android:background="@drawable/com_facebook_button_blue"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>